err/r-prj.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rprj'...
Listing './lib/python3.5/site-packages/rprj/apps'...
Compiling './lib/python3.5/site-packages/rprj/apps/dbschema.py'...
***   File "./lib/python3.5/site-packages/rprj/apps/dbschema.py", line 400
    if self._verbose: print "ObjectMgr.select: start."
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/apps/emailcomponent.py'...
***   File "./lib/python3.5/site-packages/rprj/apps/emailcomponent.py", line 134
    print "EmailComponent.connectToServer: TODO"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/apps/emptycomponent.py'...
***   File "./lib/python3.5/site-packages/rprj/apps/emptycomponent.py", line 85
    print "EmptyComponent.connectToServer: TODO"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/apps/formschema.py'...
***   File "./lib/python3.5/site-packages/rprj/apps/formschema.py", line 50
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/apps/rprjcomponent.py'...
***   File "./lib/python3.5/site-packages/rprj/apps/rprjcomponent.py", line 183
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/apps/webcomponent.py'...
***   File "./lib/python3.5/site-packages/rprj/apps/webcomponent.py", line 120
    print "WebComponent.connectToServer: TODO"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rprj/dblayer'...
Compiling './lib/python3.5/site-packages/rprj/dblayer/__init__.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/__init__.py", line 161
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/dblayer/jsonconn.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/jsonconn.py", line 86
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/dblayer/mongo.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/mongo.py", line 109
    print "dbejson:",dbejson
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/dblayer/mydb.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/mydb.py", line 35
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/dblayer/pgdb.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/pgdb.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/dblayer/sqlitedb.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/sqlitedb.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/dblayer/winodbc.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/winodbc.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/dblayer/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/rprj/dblayer/xmlrpc.py", line 119
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rprj/formulator'...
Compiling './lib/python3.5/site-packages/rprj/formulator/__init__.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/__init__.py", line 268
    print "FMasterDetail.fetchChilds: self.dbmgr=%s" % self.dbmgr
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/formulator/emailwidget.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/emailwidget.py", line 44
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/formulator/emptywidget.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/emptywidget.py", line 73
    print "EmptyWidget.setFormFactory: TODO"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/formulator/explorerwidget.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/explorerwidget.py", line 104
    if DEBUG_WIDGET: print "ExplorerWidget._treeItemAtEventPosition: eventPosition=%s"%(eventPosition)
                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/formulator/qtgui.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/qtgui.py", line 308
    print "FFileField.setValue: TODO - isImage=True"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/formulator/searchwidget.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/searchwidget.py", line 104
    print "myfieldinstance:",myfieldinstance
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/formulator/serverwidget.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/serverwidget.py", line 165
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rprj/formulator/webwidget.py'...
***   File "./lib/python3.5/site-packages/rprj/formulator/webwidget.py", line 92
    print "WebWidget.setFormFactory: TODO"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rprj/net'...
Compiling './lib/python3.5/site-packages/rprj/net/XmlrpcTransports.py'...
***   File "./lib/python3.5/site-packages/rprj/net/XmlrpcTransports.py", line 66
    print "Server:\thttp://"+host+handler
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rprj/net/jsonlib.py'...
***   File "./lib/python3.5/site-packages/rprj/net/jsonlib.py", line 36
    print d
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rprj/qtwidgets'...
Compiling './lib/python3.5/site-packages/rprj/qtwidgets/editwidgetcontroller.py'...
***   File "./lib/python3.5/site-packages/rprj/qtwidgets/editwidgetcontroller.py", line 155
    print "EditWidgetController.slotIndent: TODO"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
